GPII-1099:  Refactored to move all handlebars code out of gpii.express.  Also refactored the calling of helpers per feedback from Antranig.  Also preemptively implemented other requested fixed (removing namespace variables, et cetera).

--- a/src/tests/html/client-tests.html
+++ b/src/tests/html/client-tests.html
@@ -28,8 +28,11 @@
         <script type="text/javascript" src="/bc/pagedown/Markdown.Sanitizer.js"></script>
 
         <!-- Bring in client library being tested -->
-        <script type="text/javascript" src="/src/js/common/helpers.js"></script>
-        <script type="text/javascript" src="/src/js/client/helpers-client.js"></script>
+        <script type="text/javascript" src="/src/js/client/handlebars.js"></script>
+        <script type="text/javascript" src="/src/js/common/helper.js"></script>
+        <script type="text/javascript" src="/src/js/common/md-common.js"></script>
+        <script type="text/javascript" src="/src/js/client/md-client.js"></script>
+        <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
 
         <!-- Bring in our jqUnit dependencies -->
         <script type="text/javascript" src="/modules/infusion/tests/lib/qunit/js/qunit.js"></script>
