Finished server and client-side tests using new gpii.express conventions.

--- a/tests/html/client-tests.html
+++ b/tests/html/client-tests.html
@@ -40,7 +40,7 @@
         <script type="text/javascript" src="/modules/infusion/tests/test-core/jqUnit/js/jqUnit-browser.js"></script>
 
         <!-- Bring in our test helper -->
-        <script type="text/javascript" src="/src/tests/js/client-tests.js"></script>
+        <script type="text/javascript" src="/tests/js/client-tests.js"></script>
     </head>
     <body>
         <h1 id="qunit-header">Handlebars Helper Test Suite</h1>
