--- a/tests/html/client-tests.html
+++ b/tests/html/client-tests.html
@@ -34,26 +34,15 @@
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
         <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
 
-        <!-- Bring in our jqUnit dependencies -->
-        <script type="text/javascript" src="/modules/infusion/tests/lib/qunit/js/qunit.js"></script>
-        <script type="text/javascript" src="/modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
-        <script type="text/javascript" src="/modules/infusion/tests/test-core/jqUnit/js/jqUnit-browser.js"></script>
-
         <!-- Bring in our test helper -->
         <script type="text/javascript" src="/tests/js/client-tests.js"></script>
     </head>
     <body>
-        <h1 id="qunit-header">Handlebars Helper Test Suite</h1>
+        <h1>Handlebars Test Suite</h1>
 
-        <p>This page needs to be served up by a server that can also deliver the required handlebars templates.  The tests should not complete in a standalone browser.</p>
+        <p>This page needs to be served up by a server that can also deliver the required handlebars templates.  The test server is configured to do this.</p>
 
         <hr/>
-
-        <h2 id="qunit-banner"></h2>
-        <div id="qunit-testrunner-toolbar"></div>
-        <h2 id="qunit-userAgent"></h2>
-        <ol id="qunit-tests"></ol>
-        <div id="qunit-fixture">
             <!-- The markup we will be targeting -->
 
             <!-- Must come first so that we can tell that content has been inserted before it... -->
@@ -74,63 +63,6 @@
         <script type="text/javascript">
             <!-- instantiate test component -->
             var tests = gpii.hb.clientTests("body");
-
-            <!-- Fire up tests once the document has loaded -->
-            $(document).ready(function() {
-                tests.runTests();
-            });
-        </script>
-
-        <!-- Add test templates -->
-        <!-- TODO:  Set up a server that will provide the template content and remove this -->
-        <script id="template-template" type="text/x-handlebars-template">
-            <div class="rendered-content">
-                <h1>Content from the template:</h1>
-                <div>
-                    {{{body}}}
-                </div>
-                <hr/>
-
-                {{>partial}}
-            </div>
-        </script>
-
-        <script id="template-replace" type="text/x-handlebars-template">
-            <div class="viewport-replaceWith">
-                <h1>Content from the template:</h1>
-                <div>
-                    {{{body}}}
-                </div>
-                <hr/>
-
-                {{>partial}}
-            </div>
-        </script>
-
-        <script id="partial-partial" type="text/x-handlebars-template">
-            <h2>Content from the partial:</h2>
-
-            <table>
-                <thead>
-                <tr>
-                    <th>item</th><th>value</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>model variable</td>
-                    <td class="variable">{{myvar}}</td>
-                </tr>
-                <tr>
-                    <td>jsonify</td>
-                    <td class="jsonify">{{{jsonify json}}}</td>
-                </tr>
-                <tr>
-                    <td>markdown</td>
-                    <td class="markdown">{{{md markdown}}}</td>
-                </tr>
-                </tbody>
-            </table>
         </script>
     </body>
 </html>
