GPII-1175:  Initial implementation of `requestAware` and `templateFormControl` grades, tested manually.

--- a/tests/static/client-tests.html
+++ b/tests/static/client-tests.html
@@ -34,7 +34,7 @@
         <script type="text/javascript" src="/src/js/common/equals.js"></script>
 
         <!-- Bring in our test helper -->
-        <script type="text/javascript" src="/tests/js/client-tests.js"></script>
+        <script type="text/javascript" src="/content/js/client-tests.js"></script>
     </head>
     <body>
         <h1>Handlebars Helper Test Suite</h1>
