GPII-1175:  Wired in function to rebuild the DOM when parts of the container are replaced with template content.  Also split current test harness into "success" and "failure" cases.

--- a/tests/static/template-aware-tests.html
+++ b/tests/static/template-aware-tests.html
@@ -47,11 +47,16 @@
 
         <hr/>
 
-        <div class="viewport"><div class="schmewport">This content should not be visible.</div></div>
+        <div class="readyForSuccess">This content should not be visible.></div>
+
+        <hr/>
+
+        <div class="readyForFailure">This content should not be visible.></div>
 
         <script type="text/javascript">
             <!-- instantiate test component -->
-            var tests = gpii.hb.tests.templateAware(".viewport");
+            var success = gpii.hb.tests.templateAware.readyForSuccess(".readyForSuccess");
+            var failure = gpii.hb.tests.templateAware.readyForFailure(".readyForFailure");
         </script>
     </body>
 </html>
