GPII-1175:  Fixed bug with selector usage in `templateAware` that would result in the whole container being clobbered regardless of the configured selectors.

--- a/tests/static/tests-templateAware.html
+++ b/tests/static/tests-templateAware.html
@@ -49,9 +49,17 @@
 
         <div class="viewport">This content should not be visible.></div>
 
+        <hr/>
+
+        <div class="contained">
+            <p>This content should not be overwritten.</p>
+            <div class="contained-inner">This content should not be visible.</div>
+        </div>
+
         <script type="text/javascript">
             <!-- instantiate test component -->
             var templateAware = gpii.hb.tests.templateAware(".viewport");
+            var contained = gpii.hb.tests.templateAware.contained(".contained");
         </script>
     </body>
 </html>
