GPII-1175:  Abstracted out a multi-template handler and update the form grade to use that to cleanly separate out refresh cycles.

--- a/tests/static/tests-rendering.html
+++ b/tests/static/tests-rendering.html
@@ -35,6 +35,9 @@
 
         <!-- Bring in our test helper -->
         <script type="text/javascript" src="/content/js/tests-rendering.js"></script>
+
+        <!-- Foundation styles -->
+        <link rel="stylesheet" href="/bc/foundation/css/foundation.css"/>
     </head>
     <body>
         <h1>Handlebars Helper Test Suite</h1>
