GPII-1175:  Added test case to demonstrate "stack size exceeded" errors when nesting `templateFormControl` components.

--- a/tests/static/tests-templateFormControl.html
+++ b/tests/static/tests-templateFormControl.html
@@ -84,6 +84,8 @@
 
                 <div class="readyForKeys">This content should not be visible.</div>
 
+                <div class="readyForNested">This content should not be visible.</div>
+
                 <script type="text/javascript">
                     <!-- instantiate test component -->
                     var success          = gpii.hb.tests.templateFormControl.readyForSuccess(".readyForSuccess");
@@ -94,6 +96,7 @@
                     var stringFailure    = gpii.hb.tests.templateFormControl.readyForStringFailure(".readyForStringFailure");
                     var ambiguous        = gpii.hb.tests.templateFormControl.readyForAmbiguity(".readyForAmbiguity");
                     var keyed            = gpii.hb.tests.templateFormControl.readyForKeys(".readyForKeys");
+                    var nested           = gpii.hb.tests.templateFormControl.readyForNested(".readyForNested");
                 </script>
             </div>
         </div>
