GPII-1222:  Broke down `templateFormControl` and other key grades to more cleanly separate functions.  As a side effect, it is now possible to test the handlebars client without a corresponding server.

--- a/tests/static/tests-templateAware.html
+++ b/tests/static/tests-templateAware.html
@@ -54,7 +54,7 @@
 
                 <hr/>
 
-                <div class="viewport">This content should not be visible.></div>
+                <div class="viewport">This content should not be visible.</div>
 
                 <hr/>
 
@@ -66,9 +66,9 @@
         </div>
 
         <script type="text/javascript">
-            <!-- instantiate test component -->
+            <!-- instantiate test components -->
             var templateAware = gpii.hb.tests.templateAware(".viewport");
-            var contained = gpii.hb.tests.templateAware.contained(".contained");
+            var contained     = gpii.hb.tests.templateAware.contained(".contained");
         </script>
     </body>
 </html>
