--- a/tests/static/tests-templateFormControl.html
+++ b/tests/static/tests-templateFormControl.html
@@ -89,16 +89,15 @@
                 <div class="readyForNested">This content should not be visible.</div>
 
                 <script type="text/javascript">
-                    <!-- instantiate test component -->
-//                    var success          = gpii.hb.tests.templateFormControl.readyForSuccess(".readyForSuccess");
-//                    var successString    = gpii.hb.tests.templateFormControl.readyForStringSuccess(".readyForStringSuccess");
-//                    var successStringify = gpii.hb.tests.templateFormControl.readyForStringifySuccess(".readyForStringifySuccess");
-//                    var failure          = gpii.hb.tests.templateFormControl.readyForFailure(".readyForFailure");
-//                    var stringifyFailure = gpii.hb.tests.templateFormControl.readyForStringifyFailure(".readyForStringifyFailure");
-//                    var stringFailure    = gpii.hb.tests.templateFormControl.readyForStringFailure(".readyForStringFailure");
-//                    var ambiguous        = gpii.hb.tests.templateFormControl.readyForAmbiguity(".readyForAmbiguity");
-//                    var keyed            = gpii.hb.tests.templateFormControl.readyForKeys(".readyForKeys");
-                    fluid.setLogging(true);
+                    <!-- instantiate test components -->
+                    var success          = gpii.hb.tests.templateFormControl.readyForSuccess(".readyForSuccess");
+                    var successString    = gpii.hb.tests.templateFormControl.readyForStringSuccess(".readyForStringSuccess");
+                    var successStringify = gpii.hb.tests.templateFormControl.readyForStringifySuccess(".readyForStringifySuccess");
+                    var failure          = gpii.hb.tests.templateFormControl.readyForFailure(".readyForFailure");
+                    var stringifyFailure = gpii.hb.tests.templateFormControl.readyForStringifyFailure(".readyForStringifyFailure");
+                    var stringFailure    = gpii.hb.tests.templateFormControl.readyForStringFailure(".readyForStringFailure");
+                    var ambiguous        = gpii.hb.tests.templateFormControl.readyForAmbiguity(".readyForAmbiguity");
+                    var keyed            = gpii.hb.tests.templateFormControl.readyForKeys(".readyForKeys");
                     var nested           = gpii.hb.tests.templateFormControl.readyForNested(".readyForNested");
                 </script>
             </div>
