--- a/tests/static/tests-templateFormControl.html
+++ b/tests/static/tests-templateFormControl.html
@@ -28,6 +28,7 @@
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="/src/js/client/handlebars.js"></script>
         <script type="text/javascript" src="/src/js/client/binder.js"></script>
+        <script type="text/javascript" src="/src/js/client/ajaxCapable.js"></script>
         <script type="text/javascript" src="/src/js/client/templateAware.js"></script>
         <script type="text/javascript" src="/src/js/client/multiTemplateAware.js"></script>
         <script type="text/javascript" src="/src/js/client/templateMessage.js"></script>
