GPII-1225: Refactored to remove `multiTemplateAware` grade in favor of a handlebars helper that will correctly wire together a complex multi-component panel with a single renderer.

--- a/tests/html/tests-binder.html
+++ b/tests/html/tests-binder.html
@@ -152,12 +152,12 @@
 
         <script type="text/javascript">
             <!-- instantiate test components -->
-            var long     = gpii.hb.tests.binder.long(".viewport-long");
-            var short    = gpii.hb.tests.binder.short(".viewport-short");
-            var array    = gpii.hb.tests.binder.array(".viewport-array");
-            var textarea = gpii.hb.tests.binder.long(".viewport-textarea");
-            var select   = gpii.hb.tests.binder.long(".viewport-select");
-            var radio    = gpii.hb.tests.binder.radio(".viewport-radio");
+            var long     = gpii.tests.binder.long(".viewport-long");
+            var short    = gpii.tests.binder.short(".viewport-short");
+            var array    = gpii.tests.binder.array(".viewport-array");
+            var textarea = gpii.tests.binder.long(".viewport-textarea");
+            var select   = gpii.tests.binder.long(".viewport-select");
+            var radio    = gpii.tests.binder.radio(".viewport-radio");
         </script>
     </body>
 </html>
