--- a/tests/static/tests-rendering.html
+++ b/tests/static/tests-rendering.html
@@ -26,7 +26,8 @@
         <script type="text/javascript" src="/bc/pagedown/Markdown.Sanitizer.js"></script>
 
         <!-- Bring in client library being tested -->
-        <script type="text/javascript" src="/src/js/client/handlebars.js"></script>
+        <script type="text/javascript" src="/src/js/client/templateAware.js"></script>
+        <script type="text/javascript" src="/src/js/client/renderer.js"></script>
         <script type="text/javascript" src="/src/js/common/helper.js"></script>
         <script type="text/javascript" src="/src/js/common/md-common.js"></script>
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
@@ -64,7 +65,7 @@
 
         <script type="text/javascript">
             <!-- instantiate test component -->
-            var tests = gpii.hb.clientTests("body");
+            var tests = gpii.clientTests("body");
         </script>
     </body>
 </html>
