--- a/tests/static/tests-binder.html
+++ b/tests/static/tests-binder.html
@@ -2,30 +2,30 @@
     <head>
         <title>Unit Tests for Binder Module</title>
         <!-- Bring in jQuery and other dependencies -->
-        <script type="text/javascript" src="../../node_modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
 
         <!-- Bring in fluid dependencies -->
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/FluidDocument.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/Fluid.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/FluidDOMUtilities.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/FluidIoC.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/DataBinding.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/FluidView.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/lib/fastXmlPull/js/fastXmlPull.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/renderer/js/fluidParser.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/renderer/js/fluidRenderer.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/FluidRequests.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/ModelTransformation.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/ModelTransformationTransforms.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidDocument.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/Fluid.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidDOMUtilities.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidIoC.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/DataBinding.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidView.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/lib/fastXmlPull/js/fastXmlPull.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/renderer/js/fluidParser.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/renderer/js/fluidRenderer.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidRequests.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/ModelTransformation.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/ModelTransformationTransforms.js"></script>
 
         <!-- Bring in client library being tested -->
-        <script type="text/javascript" src="../../src/js/client/binder.js"></script>
+        <script type="text/javascript" src="/src/js/client/binder.js"></script>
 
         <!-- Bring in our test helper -->
-        <script type="text/javascript" src="../static/js/tests-binder.js"></script>
+        <script type="text/javascript" src="/content/js/tests-binder.js"></script>
 
         <!-- Foundation styles -->
-        <link rel="stylesheet" href="../../bower_components/foundation/css/foundation.css"/>
+        <link rel="stylesheet" href="/bc/foundation/css/foundation.css"/>
     </head>
     <body>
         <div class="row">
