--- a/tests/static/tests-templateMessage.html
+++ b/tests/static/tests-templateMessage.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Unit Tests for "Template Aware" components</title>
+        <title>Tests for "Template Message" component</title>
         <!-- Bring in jQuery and other dependencies -->
         <script type="text/javascript" src="/modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
 
@@ -17,7 +17,8 @@
         <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidRequests.js"></script>
         <script type="text/javascript" src="/modules/infusion/src/framework/core/js/ModelTransformation.js"></script>
         <script type="text/javascript" src="/modules/infusion/src/framework/core/js/ModelTransformationTransforms.js"></script>
-        
+
+
         <!-- Bring in Handlebars dependency -->
         <script type="text/javascript" src="/bc/handlebars/handlebars.js"></script>
 
@@ -25,49 +26,46 @@
         <script type="text/javascript" src="/bc/pagedown/Markdown.Converter.js"></script>
         <script type="text/javascript" src="/bc/pagedown/Markdown.Sanitizer.js"></script>
 
-        <!-- Bring in client library being tested -->
+        <script type="text/javascript" src="/src/js/common/helper.js"></script>
+        <script type="text/javascript" src="/src/js/common/equals.js"></script>
+        <script type="text/javascript" src="/src/js/common/md-common.js"></script>
+        <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
+        <script type="text/javascript" src="/src/js/client/md-client.js"></script>
         <script type="text/javascript" src="/src/js/client/handlebars.js"></script>
         <script type="text/javascript" src="/src/js/client/binder.js"></script>
+
+        <!-- Bring in client library being tested -->
         <script type="text/javascript" src="/src/js/client/templateAware.js"></script>
-        <script type="text/javascript" src="/src/js/client/multiTemplateAware.js"></script>
         <script type="text/javascript" src="/src/js/client/templateMessage.js"></script>
-        <script type="text/javascript" src="/src/js/client/templateFormControl.js"></script>
-        <script type="text/javascript" src="/src/js/common/helper.js"></script>
-        <script type="text/javascript" src="/src/js/common/md-common.js"></script>
-        <script type="text/javascript" src="/src/js/client/md-client.js"></script>
-        <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
-        <script type="text/javascript" src="/src/js/common/equals.js"></script>
 
         <!-- Bring in our test helper -->
-        <script type="text/javascript" src="/content/js/tests-templateAware.js"></script>
+        <script type="text/javascript" src="/content/js/tests-templateMessage.js"></script>
 
         <!-- Foundation styles -->
         <link rel="stylesheet" href="/bc/foundation/css/foundation.css"/>
     </head>
     <body>
         <div class="row">
-            <div class="column">
-                <h1>"Template Aware" Component Tests</h1>
+            <div class="column medium-12">
+                <h1>"Template Message" Test Suite</h1>
 
-                <p>This page needs to be served up by a server that can also deliver the required handlebars templates.  The tests should not complete in a standalone browser.</p>
-
-                <hr/>
-
-                <div class="viewport">This content should not be visible.</div>
+                <p>This page provides test components that can be opened using any browser as a file.</p>
 
                 <hr/>
 
-                <div class="contained">
-                    <p>This content should not be overwritten.</p>
-                    <div class="contained-inner">This content should not be visible.</div>
-                </div>
+                <h2>Initialized with Data</h2>
+                <div class="viewport-initialized">This content should not be visible.</div>
+
+                <h2>Data Added Using Change Applier</h2>
+                <div class="viewport-updated">This content should not be visible.</div>
             </div>
         </div>
 
         <script type="text/javascript">
             <!-- instantiate test components -->
-            var templateAware = gpii.hb.tests.templateAware(".viewport");
-            var contained     = gpii.hb.tests.templateAware.contained(".contained");
+            var initialized = gpii.hb.tests.templateMessage.initialized(".viewport-initialized");
+            var updated     = gpii.hb.tests.templateMessage.updated(".viewport-updated");
+            updated.applier.change("message", "Some are born with data, some achieve data, and some have data thrust upon them.");
         </script>
     </body>
 </html>
