GPII-1222: Finished refactoring tests so that `npm test` works as expected.

--- a/tests/static/tests-templateMessage.html
+++ b/tests/static/tests-templateMessage.html
@@ -31,7 +31,7 @@
         <script type="text/javascript" src="/src/js/common/md-common.js"></script>
         <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
-        <script type="text/javascript" src="/src/js/client/handlebars.js"></script>
+        <script type="text/javascript" src="/src/js/client/renderer.js"></script>
         <script type="text/javascript" src="/src/js/client/binder.js"></script>
 
         <!-- Bring in client library being tested -->
@@ -63,8 +63,8 @@
 
         <script type="text/javascript">
             <!-- instantiate test components -->
-            var initialized = gpii.hb.tests.templateMessage.initialized(".viewport-initialized");
-            var updated     = gpii.hb.tests.templateMessage.updated(".viewport-updated");
+            var initialized = gpii.templates.tests.templateMessage.initialized(".viewport-initialized");
+            var updated     = gpii.templates.tests.templateMessage.updated(".viewport-updated");
             updated.applier.change("message", "Some are born with data, some achieve data, and some have data thrust upon them.");
         </script>
     </body>
