GPII-1509:  Updated `initBlock` and `templateManager` to correctly distribute renderer and to work with modern `infusion`, `jqUnit`, etc.

--- a/tests/static/tests-rendering.html
+++ b/tests/static/tests-rendering.html
@@ -26,6 +26,7 @@
         <script type="text/javascript" src="/bc/pagedown/Markdown.Sanitizer.js"></script>
 
         <!-- Bring in client library being tested -->
+        <script type="text/javascript" src="/src/js/client/binder.js"></script>
         <script type="text/javascript" src="/src/js/client/templateAware.js"></script>
         <script type="text/javascript" src="/src/js/client/renderer.js"></script>
         <script type="text/javascript" src="/src/js/common/helper.js"></script>
